Journey Slider alignment fixed

--- a/src/Views/StaticSite/Views/Courses/Views/Nutridiet.scss
+++ b/src/Views/StaticSite/Views/Courses/Views/Nutridiet.scss
@@ -4847,6 +4847,7 @@
       flex-direction: column;
       align-items: flex-start;
       padding: 10px;
+      top: 15px;
     }
 
 
